--- a/dad_jokes_server/Dockerfile
+++ b/dad_jokes_server/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /dad-jokes-client
 COPY dad-jokes-client/. .
 
 # You have to set this because it should be set during build time.
-ENV REACT_APP_BASE_URL=<Your REACT_APP_BASE_URL here>
+ENV REACT_APP_BASE_URL='https://best-dad-jokes-app.herokuapp.com'
 
 # Build our React App
 RUN npm install
