--- a/dad_jokes_server/Pipfile
+++ b/dad_jokes_server/Pipfile
@@ -10,8 +10,8 @@ jinja2 = "~=2.11"
 flask-wtf = "*"
 flask-sqlalchemy = "*"
 psycopg2-binary = "*"
-sqlalchemy = "*"
-alembic = "*"
+sqlalchemy = "==1.3.19"
+alembic = "==1.4.3"
 flask-migrate = "*"
 flask-cors = "*"
 gunicorn = "*"
